--- a/js/directives/teamCard.html
+++ b/js/directives/teamCard.html
@@ -10,7 +10,7 @@
     </p>
   </div>
   <div class="mdl-card__actions mdl-card--border">
-    <a ng-click="$parent.selectTeam($parent.$index)" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+    <a ui-sref="team({ teamId: info.id })" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
       View Team
     </a>
   </div>
