Simplified the styles, implemented register/login

--- a/js/directives/teamCard.html
+++ b/js/directives/teamCard.html
@@ -3,11 +3,9 @@
     <h2 class="mdl-card__title-text">{{ info.name }}</h2>
   </div>
   <div class="mdl-card__supporting-text">
-    <p>
-      Wins 10 - 12 Losss
-      Goal difference +2
-      Other stats...
-    </p>
+    <p>Wins 10 - 12 Losss</p>
+    <p>Goal difference +2</p>
+    <p>Other stats...</p>
   </div>
   <div class="mdl-card__actions mdl-card--border">
     <a ui-sref="team({ teamId: info.id })" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
