--- a/index.html
+++ b/index.html
@@ -36,47 +36,27 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="js/app.js"></script>
   </head>
-  <body ng-controller="mainController">
-    <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
-      <header class="demo-header mdl-layout__header mdl-color--white mdl-color--grey-100 mdl-color-text--grey-600">
+  <body ng-controller="MainController">
+    <div class="main-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
+      <header class="main-header mdl-layout__header mdl-color--white mdl-color--grey-100 mdl-color-text--grey-600">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">{{title}}</span>
+          <span class="mdl-layout-title">PLP</span>
           <div class="mdl-layout-spacer"></div>
-          <!--div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
-            <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
-              <i class="material-icons">search</i>
-            </label>
-            <div class="mdl-textfield__expandable-holder">
-              <input class="mdl-textfield__input" type="text" id="search" />
-              <label class="mdl-textfield__label" for="search">Enter your query...</label>
-            </div>
-          </div-->
-          <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="hdrbtn">
-            <i class="material-icons">more_vert</i>
-          </button>
-          <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" for="hdrbtn">
-            <li class="mdl-menu__item">About</li>
-            <li class="mdl-menu__item">Contact</li>
-            <li class="mdl-menu__item">Legal information</li>
-          </ul>
+          <div ng-show="user == false">
+            <button ng-click="showLogin()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
+              Login
+            </button>
+            <button ng-click="showRegister()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
+              Register
+            </button>
+          </div>
+          <div ng-hide="user == false">
+            <span>{{ user.username }}</span>
+          </div>
         </div>
       </header>
-      <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
-        <header class="demo-drawer-header">
-          <img src="images/user.jpg" class="demo-avatar">
-          <div class="demo-avatar-dropdown">
-            <span>Username</span>
-            <div class="mdl-layout-spacer"></div>
-            <button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-              <i class="material-icons">arrow_drop_down</i>
-            </button>
-            <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="accbtn">
-              <button class="mdl-menu__item">My Profile</button>
-              <button class="mdl-menu__item">Logout</button>
-            </ul>
-          </div>
-        </header>
-        <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
+      <div class="side-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
+        <nav class="side-drawer-navigation mdl-navigation mdl-color--blue-grey-800">
           <a class="mdl-navigation__link" ui-sref="home"><i class="mdl-color-text--blue-grey-400 material-icons">home</i>Home</a>
           <a class="mdl-navigation__link" ui-sref="teams"><i class="mdl-color-text--blue-grey-400 material-icons">people</i>Teams</a>
           <a class="mdl-navigation__link" ui-sref="events"><i class="mdl-color-text--blue-grey-400 material-icons">event</i>Events</a>
@@ -88,7 +68,9 @@
         </nav>
       </div>
       <main class="mdl-layout__content mdl-color--grey-100">
-        <div class="mdl-grid demo-content" ui-view>
+        <login-card ng-show="loginVisible"></login-card>
+        <register-card ng-show="registerVisible"></register-card>
+        <div class="mdl-grid main-content" ui-view>
           
         </div>
       </main>
