--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" ng-app="plpApp">
   <head>
-    <base href="/">
+    <base href="/plp-angularjs/">
     
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,10 +31,10 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
     <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.blue-red.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="js/app.js"></script>
   </head>
   <body ng-controller="MainController">
     <div class="main-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
@@ -64,7 +64,7 @@
           <a class="mdl-navigation__link" ui-sref="predictions"><i class="mdl-color-text--blue-grey-400 material-icons">thumbs_up_down</i>Predictions</a>
           <a class="mdl-navigation__link" ui-sref="leaderboard"><i class="mdl-color-text--blue-grey-400 material-icons">flag</i>Leaderboard</a>
           <div class="mdl-layout-spacer"></div>
-          <a class="mdl-navigation__link"><i class="mdl-color-text--blue-grey-400 material-icons">help_outline</i></a>
+          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons">help_outline</i></a>
         </nav>
       </div>
       <main class="mdl-layout__content mdl-color--grey-100">
